# CFD_WITH_CPP

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: advection1d.cpp  burgers1d.cpp  initialize_field.cpp
comparison/burgers_sinewave_old/rusanov_muscl_superbee_ssprk3/: run_summary.json
config/: burgers.json
docs/: burgers_fvm_design.md
include/: Field1D.h  Grid1D.h  InitialConditions.h
include/analysis/: ErrorAnalysis.h
include/core/: Field1D.h  Grid1D.h  SimulationConfig.h  Vector.h
include/discretization-numerics/: AdvectionScheme.h  FTCS.h  UpwindScheme.h
include/io/: CSVWriter.h  ConfigReader.h  OutputManager.h  OutputWriter.h  OutputWriterFactory.h  RunSummaryWriter.h  TecplotWriter1D.h  VTKWriter1D.h
include/numerics/: AdvectionScheme.h  FTCS.h  LaxFriedrichsScheme.h  LaxWendroffScheme.h  UpwindScheme.h
include/numerics/flux/: FluxFactory.h  NumericalFlux.h  RusanovFlux.h
include/numerics/limiter/: MinmodLimiter.h  NoLimiter.h  SlopeLimiter.h  SlopeLimiterFactory.h  SuperbeeLimiter.h  UnlimitedLimiter.h  VanLeerLimiter.h
include/numerics/reconstruction/: MUSCLReconstruction.h  PiecewiseConstantReconstruction.h  Reconstruction.h  ReconstructionFactory.h
include/numerics/spatial/: FiniteVolumeOperator.h  FiniteVolumeSpatialOperator.h  FirstOrderFVOperator.h  SpatialOperator.h
include/numerics/time/: ForwardEuler.h  RK2.h  SSPRK3.h  TimeIntegrator.h  TimeIntegratorFactory.h
include/physics/: BurgersEquation.h  BurgersFlux.h  ExactSolutions.h  FluxFunction.h  HyperbolicEquation.h  InitialConditions.h
include/physics/initial_conditions/: InitialConditionFactory.h  InitialConditions.h
python/: animate_solution.py  compare_files.py  compare_muscl.py  plot_snapshots_sine  plot_solution.py  plot_squarepulse.py
src/: FTCS.cpp  Field1D.cpp  InitialConditions.cpp  UpwindScheme.cpp
src/analysis/: ErrorAnalysis.cpp
src/core/: Field1D.cpp  Grid1D.cpp  Vector.cpp
src/discretization-numerics/: FTCS.cpp
src/io/: CSVWriter.cpp  ConfigReader.cpp  OutputManager.cpp  OutputWriterFactory.cpp  RunSummaryWriter.cpp  TecplotWriter1D.cpp  VTKWriter1D.cpp
src/numerics/: FTCS.cpp  LaxFriedrichsScheme.cpp  LaxWendroffScheme.cpp  UpwindScheme.cpp
src/numerics/flux/: FluxFactory.cpp  RusanovFlux.cpp
src/numerics/limiter/: MinmodLimiter.cpp  NoLimiter.cpp  SlopeLimiterFactory.cpp  SuperbeeLimiter.cpp  UnlimitedLimiter.cpp  VanLeerLimiter.cpp
src/numerics/reconstruction/: MUSCLReconstruction.cpp  PiecewiseConstantReconstruction.cpp  ReconstructionFactory.cpp
src/numerics/spatial/: FiniteVolumeSpatialOperator.cpp  FirstOrderFVOperator.cpp
src/numerics/time/: ForwardEuler.cpp  RK2.cpp  SSPRK3.cpp  TimeIntegratorFactory.cpp
src/physics/: BurgersEquation.cpp  ExactSolutions.cpp  InitialConditions.cpp
src/physics/initial_conditions/: InitialConditionFactory.cpp  InitialConditions.cpp
tests/: test_error_analysis.cpp  test_field1d.cpp  test_grid1d.cpp  test_upwind_scheme.cpp  test_vector.cpp
